--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,7 +1,7 @@
 {
 	"_version": "1.8.0",
 	"sap.app": {
-		"id": "yelcho.mydemo.comprouting",
+		"id": "yelcho.mydemo.nestcomprouting",
 		"type": "application",
 		"i18n": "i18n/i18n.properties",
 		"title": "{{appTitle}}",
@@ -21,7 +21,7 @@
 	},
 	"sap.ui5": {
 		"rootView": {
-			"viewName": "yelcho.mydemo.comprouting.view.App",
+			"viewName": "yelcho.mydemo.nestcomprouting.view.App",
 			"type": "XML",
 			"async": true,
 			"id": "app"
@@ -30,24 +30,30 @@
 			"suppliersComponent": {
 				"name": "yelcho.reuse.suppliers",
 				"settings": {},
-				"componentData": {},
+				"componentData": {
+					"parentComponentName": "yelcho.mydemo.nestcomprouting.Component"
+				},
 				"lazy": true
 			},
 			"categoriesComponent": {
 				"name": "yelcho.reuse.categories",
 				"settings": {},
-				"componentData": {},
+				"componentData": {
+					"parentComponentName": "yelcho.mydemo.nestcomprouting.Component"
+				},
 				"lazy": true
 			},
 			"productsComponent": {
 				"name": "yelcho.reuse.products",
 				"settings": {},
-				"componentData": {},
+				"componentData": {
+					"parentComponentName": "yelcho.mydemo.nestcomprouting.Component"
+				},
 				"lazy": true
 			}
 		},
 		"dependencies": {
-			"minUI5Version": "1.65",
+			"minUI5Version": "1.72",
 			"libs": {
 				"sap.m": {}
 			}
@@ -56,7 +62,7 @@
 			"i18n": {
 				"type": "sap.ui.model.resource.ResourceModel",
 				"settings": {
-					"bundleName": "yelcho.mydemo.comprouting.i18n.i18n"
+					"bundleName": "yelcho.mydemo.nestcomprouting.i18n.i18n"
 				}
 			}
 		},
@@ -71,7 +77,7 @@
 			"config": {
 				"routerClass": "sap.m.routing.Router",
 				"viewType": "XML",
-				"viewPath": "yelcho.mydemo.comprouting.view",
+				"viewPath": "yelcho.mydemo.nestcomprouting.view",
 				"controlId": "app",
 				"controlAggregation": "pages",
 				"transition": "slide",
